@@ -1,3 +1,8 @@
+2002-07-17  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* ResMgr.cc, resource.cc, FileAccess.cc, FileAccess.h: ftp:device-prefix
+	  setting (default off).
+
 2002-07-12  Glenn Maynard <g_ld@zewt.org>
 
 	* FindJob.cc, commands.cc: delete args properly. This fixes a coredump.
